--- a/src/packaging/texpackvars.ini
+++ b/src/packaging/texpackvars.ini
@@ -1,4 +1,5 @@
 packagename=exercisebank
 github=https://github.com/Strauman/exercisebank/
-version=0.1.3
-build=71
+version=0.1.4
+build=72
+packfile=exbankpack.tex
