--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.DS_Store
 bin/
 */bin/
 *.sty-E
@@ -29,3 +30,8 @@ docs/
 !docs/commands.log
 src/main.pdf
 *.orig
+*.bak0
+*.bak*
+*.formated
+*.dvi
+example.pdf
