--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ sudo: required
 services: docker
 script:
   - docker pull strauman/travis-latexbuild
-  - docker run --mount src=$TRAVIS_BUILD_DIR/tests,target=/src,type=bind strauman/travis-latexbuild
+  - docker run --mount src=$TRAVIS_BUILD_DIR/tests,target=/src,type=bind --mount src=$TRAVIS_BUILD_DIR/src,target=/src/src,type=bind strauman/travis-latexbuild
