--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-branches:
-  only:
-  - travistest
-  - latest-release
+# branches:
+#   only:
+#   - travistest
+#   - latest-release
 sudo: required
 services: docker
 script:
   - docker pull strauman/travis-latexbuild
-  - docker run --mount src=$TRAVIS_BUILD_DIR/tests,target=/src,type=bind --mount src=$TRAVIS_BUILD_DIR/src,target=/src/src,type=bind strauman/travis-latexbuild
+  - docker run --mount src=$TRAVIS_BUILD_DIR/,target=/repo,type=bind strauman/travis-latexbuild
