--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,7 @@ services: docker
 script:
   - docker pull strauman/travis-latexbuild
   - docker run --mount src=$TRAVIS_BUILD_DIR/,target=/repo,type=bind strauman/travis-latexbuild
+  - echo `git status`
+  - git add *.pdf
+  - git commit -m "test"
+  - git push
