--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ env:
 script:
   - docker pull strauman/travis-latexbuild
   - docker run --mount src=$TRAVIS_BUILD_DIR/,target=/repo,type=bind strauman/travis-latexbuild
+after_success:
+  - .travis/push.sh
