--- a/src/packaging/texpackvars.ini
+++ b/src/packaging/texpackvars.ini
@@ -1,5 +1,6 @@
 packagename=exercisebank
 github=https://github.com/Strauman/exercisebank/
 version=0.2.3
-build=114
+build=115
 packfile=exbankpack.tex
+release_assets=release/exercisebank.sty,release/exercisebank-doc.pdf
